# saitama

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: CHANGELOG.md  README.md  configuration.md  installation.md  usage.md
docs/source/: conf.py  configuration.rst  index.rst  installation.rst  usage.rst
src/saitama/: __main__.py  __version__.py  common.py  conf.py  migrate.py  punch.py  state.py  test.py
src/saitama/lib/: cli.py  conf.py  parser.py
src/saitama/queries/: migration.py  state.py  test.py
src/saitama/subcommands/: common.py  migrate.py  test.py
tests/: conftest.py  test_punch.py
tests/helpers/: type_defs.py
tests/saitama/: test_main.py  test_punch.py
tests/saitama/lib/: test_cli.py  test_conf.py  test_parser.py
tests/saitama/subcommands/: test_common.py  test_migrate.py  test_test.py
