[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
target-version = ["py36", "py37", "py38"]

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true

[tool.poetry]
name = "saitama"
version = "0.2.0"
description = "A python toolset to manage postgres migrations and testing"
authors = ["spapanik <spapanik21@gmail.com>"]

license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md"]

repository = "https://github.com/spapanik/saitama"

keywords = ["unit"]
classifiers=[
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
]

[tool.poetry.scripts]
punch = "saitama.punch:main"

[tool.poetry.dependencies]
python = "^3.6"

psycopg2 = "^2.8"
toml = "^0.10"

[tool.poetry.dev-dependencies]
black = {version = "*", allows-prereleases = true}
isort = "^4.3"

pytest = "^5.1"

ipython = "^7.8"
ipdb = "^0.12"
